# GriphiBot

./: .gitignore  Start Bot.lnk  pyproject.toml
Griphi/: code_generator.py  main.py
Griphi/env/: env_reader.py
Griphi/handlers/: converter.py
Griphi/keyboards/: queue_kb.py
Griphi/locales/ru/LC_MESSAGES/: messages.mo
Griphi/speech/: app.py
